--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "gatsby-plugin-mdx": "^5.0.0",
     "gatsby-source-filesystem": "^5.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "remark-gfm": "^1.0.0"
   },
   "devDependencies": {
     "@types/node": "^18.11.9",
